# petropandas

./: .editorconfig  .env.sample  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  convert_tutorial.sh  mkdocs.yml  pyproject.toml  tox.ini
.github/workflows/: main.yml  release.yml  testing.yml
docs/: accessors.md  conf.py  elements.md  getting-started.md  getting-started.rst  index.md  index.rst  ions.md  isoplot.md  minerals.md  modules.md  oxides.md  petro.md  plots.md  ree.md  tutorial.md  tutorial.rst
docs/_static/: custom.css
docs/api/: accessors.md  accessors.rst  calc.md  calc.rst  database.md  database.rst  index.md  index.rst  minerals.md  minerals.rst  plotting.md  plotting.rst
docs/notebooks/: tutorial.ipynb  walkthrough.ipynb
notebooks/: tutorial.ipynb
petropandas/: __init__.py  constants.py  database.py  examples.py  io.py  minerals.py  pandas_accessors.py
petropandas/data/: __init__.py  germ.json
src/petropandas/: __init__.py  _accessors.py  _calc.py  _config.py  _core.py  _database.py  _minerals.py  _plotting.py  _series.py
src/petropandas/data/: __init__.py  minerals.csv  sazava.csv
src/petropandas/hpxeos/: base.py  dioctahedral_mica.py  polynomial.py
src/petropandas/hpxeos/igneous/: __init__.py  biotite.py  clinopyroxene.py  cordierite.py  garnet.py  ilmenite.py  olivine.py  orthopyroxene.py  spinel.py
src/petropandas/hpxeos/metabasite/: __init__.py  amphibole.py  augite.py  biotite.py  chlorite.py  garnet.py  ilmenite_mixed.py  muscovite.py  olivine.py  omphacite.py  orthopyroxene.py  peristerite.py  plagioclase_ibar1.py
src/petropandas/hpxeos/metapelite/: __init__.py  biotite.py  chlorite.py  chloritoid.py  cordierite.py  epidote.py  garnet.py  ilmenite.py  ilmenite_mixed.py  kfeldspar.py  kfeldspar_cbar1.py  magnetite.py  margarite.py  muscovite.py  orthopyroxene.py  plagioclase.py  plagioclase_cbar1.py  sapphirine.py  spinel.py  staurolite.py
tests/: conftest.py  test_accessors.py  test_bulk.py  test_calc.py  test_config.py  test_core.py  test_database.py  test_foo.py  test_io.py  test_minerals.py  test_oxides_acc.py  test_petro.py  test_plotting.py  test_series.py  test_stoichiometry.py  test_tc_minerals.py
