[tool.poetry]
name = "petropandas"
version = "0.0.1"
description = "Pandas accessors for petrologists"
authors = ["Ondrej Lexa <flexa.ondrej@gmail.com>"]
repository = "https://github.com/ondrolexa/petropandas"
documentation = "https://ondrolexa.github.io/petropandas/"
readme = "README.md"
packages = [
  {include = "petropandas"}
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
numpy = "^1.26.4"
matplotlib = "^3.9.0"
pandas = "^2.2.2"
seaborn = "^0.13.2"
periodictable = "^1.7.0"
pyparsing = "^3.1.2"
openpyxl = "^3.1.3"
pyqt6 = "^6.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
deptry = "^0.12.0"
pre-commit = "^3.4.0"
tox = "^4.11.1"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.2"
mkdocs-material = "^9.2.7"
mkdocstrings = {extras = ["python"], version = "^0.23.0"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py37"
line-length = 120
fix = true
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
]

[tool.ruff.format]
preview = true



[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]

[tool.deptry]
ignore = ["DEP002"]
