[project]
name = "petropandas"
version = "0.0.1"
description = "Pandas accessors for petrologists"
readme = "README.md"
repository = "https://github.com/ondrolexa/petropandas"
maintainers = [{ name = "Ondrej Lexa", email = "lexa.ondrej@gmail.com" }]
requires-python = ">=3.10"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "PyQt6",
    "numpy",
    "matplotlib",
    "scipy",
    "pandas",
    "seaborn",
    "pyparsing",
    "xlrd",
    "openpyxl",
    "periodictable",
]

[project.optional-dependencies]
extra = ["jupyterlab"]
tests = ["pytest", "pytest-cov"]
docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
]
dev = [
    "black",
    "jupyterlab",
    "pytest",
    "pytest-cov",
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
extend-exclude = '''.*ui_.*'''

[tool.pytest.ini_options]
testpaths = ["tests"]
