[project]
name = "petropandas"
dynamic = ["version"]
description = "A pandas-accessor library for processing electron microprobe (EMPA) analyses"
readme = "README.md"
authors = [
    { name = "Ondrej Lexa", email = "lexa.ondrej@gmail.com" }
]
keywords = ["metamorphic petrology", "mineral recalculations", "EPMA"]
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "pandas>=3.0.3",
    "periodictable>=2.1.0",
    "requests>=2.31",
    "matplotlib>=3.7",
]

[project.urls]
Homepage = "https://github.com/ondrolexa/petropandas"
Documentation = "https://petropandas.readthedocs.io"
Repository = "https://github.com/ondrolexa/petropandas.git"
Issues = "https://github.com/ondrolexa/petropandas/issues"

[project.optional-dependencies]
lab = ["jupyterlab"]
docs = ["mkdocs", "mkdocs-material", "mkdocstrings[python]"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.hatch.version]
path = "src/petropandas/__init__.py"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
